objects/Margins__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Default and minimum threshold values for account margins, based on account type</description>
    <fields>
        <fullName>End_User_Default__c</fullName>
        <label>End User Default</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>End_User_Threshold__c</fullName>
        <label>End User Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_Default__c</fullName>
        <label>Reseller Default</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reseller_Threshold__c</fullName>
        <label>Reseller Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Default__c</fullName>
        <label>Wholesaler Default</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wholesaler_Threshold__c</fullName>
        <label>Wholesaler Threshold</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Margins</label>
</CustomObject>